gateway-api/canary/canary-frontend-deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-frontend-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-frontend-deployment-v1
      version: v1
  template:
    metadata:
      labels:
        app: canary-frontend-deployment-v1
        version: v1
    spec:
      containers:
        - image: hashicorp/http-echo
          name: frontend
          args:
            - "-text=Canary Frontend Deployment v1"
          ports:
            - containerPort: 5678
