gateway-api/canary/canary-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-frontend-service-v1
spec:
  selector:
    app: canary-frontend-deployment-v1
    version: v1
  ports:
    - port: 5678
      targetPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: canary-frontend-service-v2
spec:
  selector:
    app: canary-frontend-deployment-v2
    version: v2
  ports:
    - port: 5678
      targetPort: 5678
