gateway-api/canary/canary-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: canary-gateway
spec:
  gatewayClassName: nginx
  # gatewayClassName: envoy-gateway
  listeners:
    # HTTP Listener
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

    # HTTPS Listener
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same

      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-cert
