gateway-api/canary/canary-http-route-path-based.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-http-route-path-based
spec:
  parentRefs:
    - name: canary-gateway
      sectionName: http
    - name: canary-gateway
      sectionName: https

  hostnames:
    - "shop.local"

  rules:
    - backendRefs:
        - name: canary-frontend-service-v1
          port: 5678
          weight: 50

        - name: canary-frontend-service-v2
          port: 5678
          weight: 50
